@@ -3,7 +3,7 @@ Priority: extra
 Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-Build-Depends-Indep: debhelper (>= 9), python
+Build-Depends-Indep: debhelper (>= 9), autotools-dev, python
 
 Package: {$source}
 Architecture: {$architecture}
